@@ -1,3 +1,12 @@
+2007-02-11  Nicola Pero  <nicola.pero@meta-innovation.com>,
+            Matt Rice  <ratmice@gmail.com>
+
+	* gnustep-config.sh.in: New file.
+	* configure.ac: Added gnustep-config.sh
+	* configure: Regenerated.
+	* GNUmakefile.in: Install gnustep-config.sh in system Tools, which
+	is guaranteed to be in PATH.
+	
 2007-01-25  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* Documentation/GNUmakefile: Fixed 'regenerate' target when you
